--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>TowerBlocks</title>
+    <title>BlockGame</title>
     <meta name="viewport" content="width=device-width,user-scalable=no" />
     <link rel="stylesheet" href="style.css" />
 </head>
